# openlux

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  animate.c  animate.h  color.c  color.h  gamma.c  gamma.h  kelvin.c  kelvin.h  log.h  main.c  util.h
src/backend/: CMakeLists.txt  backend.c  backend.h  x11.c  x11.h
src/backend/gamma/: CMakeLists.txt  absolute.c  gamma.c  gamma.h  relative.c
src/backend/kelvin/: CMakeLists.txt  flux.c  flux_data.c  kelvin.c  kelvin.h  neilb.c  tanner.c
src/backend/os/: CMakeLists.txt  os.c  os.h  posix.c
src/backend/time/: CMakeLists.txt  mach.c  posix.c  time.c  time.h
src/backend/video/: CMakeLists.txt  ios.c  video.c  video.h  x11.c
